--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
       // Modal functions
       function openNewTranscriptionForm() {
         console.log("Opening form in new window:", CONFIG.formUrl);
-        window.open(CONFIG.formUrl, '_blank', 'noopener,noreferrer');
+        window.open(CONFIG.formUrl, "_blank", "noopener,noreferrer");
         // Refresh data after a delay to allow form submission
         setTimeout(() => fetchData(), 3000);
       }
